--- a/vis.html
+++ b/vis.html
@@ -18,7 +18,7 @@
 
     <script type="text/javascript">
       document.addEventListener('DOMContentLoaded', function() {
-          var URL = "https://docs.google.com/spreadsheets/d/11NmoOWE3gVQLAmhx5bkHJQWhkdI9tblRhSYrhy-s8tU/pubhtml"
+          var URL = "11NmoOWE3gVQLAmhx5bkHJQWhkdI9tblRhSYrhy-s8tU"
           Tabletop.init( { key: URL, callback: myData, simpleSheet: true } )
       })
       function myData(data) {
@@ -29,7 +29,7 @@
                           
                           }
       Sheetsee.makeTable(tableOptions)
-      Sheetsee.initiateTableFilter(tableOptions)
+      
     }
       }
     </script>
