--- a/vis.html
+++ b/vis.html
@@ -25,7 +25,7 @@
           var tableOptions = {
                           "data": gData,
                           "pagination": 2,
-                          "tableDiv": "#placeholder",
+                          "tableDiv": "#placeholder"
                           
                           }
       Sheetsee.makeTable(tableOptions)
