--- a/vis.html
+++ b/vis.html
@@ -24,8 +24,10 @@
       function myData(data) {
           var tableOptions = {
                           "data": gData,
-                          "pagination": 2,
-                          "tableDiv": "#placeholder"
+                          "pagination": 1,
+                          "tableDiv": "#placeholder",
+                          "filterDiv": "#fullTableFilter",
+                          "templateID": "placeholder"
                           
                           }
       Sheetsee.makeTable(tableOptions)
