--- a/vis.html
+++ b/vis.html
@@ -18,7 +18,7 @@
 
     <script type="text/javascript">
       document.addEventListener('DOMContentLoaded', function() {
-          var URL = "11NmoOWE3gVQLAmhx5bkHJQWhkdI9tblRhSYrhy-s8tU"
+          var URL = "https://docs.google.com/spreadsheets/d/11NmoOWE3gVQLAmhx5bkHJQWhkdI9tblRhSYrhy-s8tU/pubhtml?gid=1939695831&single=true"
           Tabletop.init( { key: URL, callback: showInfo, simpleSheet: true } )
       })
       function showInfo(data) {
