--- a/vis.html
+++ b/vis.html
@@ -26,7 +26,7 @@
                           "data": data,
                           "pagination": 1,
                           "tableDiv": "#placeholder",
-                          "filterDiv": "#fullTableFilter",
+                          "filterDiv": "#fullTableFilter"
                           
                           }
       Sheetsee.makeTable(tableOptions)
