--- a/vis.html
+++ b/vis.html
@@ -9,7 +9,7 @@
   <body>
 
     <h1>Ethics workshop responses visualization</h1>
-
+    
     <div id="placeholder"></div>
 
     <script id="placeholder" type="text/html">
@@ -18,7 +18,7 @@
 
     <script type="text/javascript">
       document.addEventListener('DOMContentLoaded', function() {
-          var URL = "https://docs.google.com/spreadsheets/d/11NmoOWE3gVQLAmhx5bkHJQWhkdI9tblRhSYrhy-s8tU/pubhtml?gid=1939695831&single=true"
+          var URL = "https://docs.google.com/spreadsheets/d/11NmoOWE3gVQLAmhx5bkHJQWhkdI9tblRhSYrhy-s8tU/pubhtml"
           Tabletop.init( { key: URL, callback: showInfo, simpleSheet: true } )
       })
       function showInfo(data) {
