--- a/vis.html
+++ b/vis.html
@@ -8,7 +8,7 @@
   </head>
   <body>
 
-    <h1>Ethics workshop responses visualization</h1>
+    <h1>Ethics workshop responses visualization lets c1</h1>
 
     <div id="placeholder"></div>
 
