--- a/vis.html
+++ b/vis.html
@@ -8,7 +8,7 @@
   </head>
   <body>
 
-    <h1>Ethics workshop responses visualization lets c3</h1>
+    <h1>Ethics workshop responses visualization lets c4</h1>
 
     <div id="placeholder"></div>
 
@@ -28,7 +28,7 @@
       })
       function showInfo(data) {
           var tableOptions = {
-                          "data": gData,
+                          "data": data,
                           "pagination": 1,
                           "tableDiv": "#placeholder",
                           "filterDiv": "#fullTableFilter",
