--- a/vis.html
+++ b/vis.html
@@ -8,7 +8,7 @@
   </head>
   <body>
 
-    <h1>Ethics workshop responses visualization lets c5</h1>
+    <h1>Ethics workshop responses visualization lets c6</h1>
 
     <div id="placeholder"></div>
 
@@ -16,7 +16,7 @@
       <table>
         <tr><th class="tHeader">Timestamp</th><th class="tHeader">Name</th><th class="tHeader">Profession</th><th class="tHeader">Company & Designation</th><th class="tHeader">Email ID</th></tr>
       {{#rows}}
-        <tr><td>{{timestamp}}</td><td>{{name}}</td><td>{{profession}}</td><td>{{company&designation}}</td><td>{{emailid}}</td></tr>
+        <tr><td>{{timestamp}}</td><td>{{name}}</td><td>{{profession}}</td><td>{{company&amp;designation}}</td><td>{{emailid}}</td></tr>
       {{/rows}}
       </table>
     </script>
