--- a/vis2.html
+++ b/vis2.html
@@ -4,8 +4,8 @@
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
     <script type="text/javascript" src="js/tabletop1.3.4.js"></script>
     <script type="text/javascript" src='js/sheetsee.js'></script>
-    <script src="raphael-min.js" type="text/javascript"></script>  
-    <script src="pie.js" type="text/javascript"></script> 
+    <script src="js/raphael-min.js" type="text/javascript"></script>  
+    <script src="js/pie.js" type="text/javascript"></script> 
     <link rel="stylesheet" type="text/css" href="css/sss.css">
   </head>
   <body>
