--- a/vis2.html
+++ b/vis2.html
@@ -32,7 +32,7 @@
 
       function showInfo(data) {
 
-          gData = data;
+          gData = data
 
           var pie1 = getMatches(gData, "yes", "feedback")
           var pie2 = getMatches(gData, "no", "feedback")
