--- a/vis2.html
+++ b/vis2.html
@@ -34,11 +34,15 @@
 
           gData = data
 
+          var piedata1 = [{"label":"yes","units":15},{"label":"no","units":10}]
+          /*
           var pie1 = getMatches(gData, "yes", "feedback")
           var pie2 = getMatches(gData, "no", "feedback")
 
 
           var piedata1 = [{"label": "yes", "units": getOccurance(pie1,"feedback") },{"label": "no", "units": getOccurance(pie2,"feedback") }]
+
+          */
           var pieOptions = {m: [80, 80, 80, 80], w: 600, h: 400, div: "pieChart", hiColor: "#14ECC8"}
 
 
