--- a/vis2.html
+++ b/vis2.html
@@ -34,7 +34,7 @@
 
           gData = data
 
-          var feedback = getOccurance(gData, "feedback")
+          var feedback = Sheetsee.getOccurance(gData, "feedback")
           var fColors = ["#ff00ff", "#DCF13C"]
 
           var piedata1 = makeColorArrayOfObjects(feedback,fColors)
