--- a/vis2.html
+++ b/vis2.html
@@ -37,7 +37,7 @@
           var feedback = Sheetsee.getOccurance(gData, "feedback")
           var fColors = ["#ff00ff", "#DCF13C"]
 
-          var piedata1 = makeColorArrayOfObjects(feedback,fColors)
+          var piedata1 = Sheetsee.makeColorArrayOfObjects(feedback,fColors)
           /*
           var pie1 = getMatches(gData, "yes", "feedback")
           var pie2 = getMatches(gData, "no", "feedback")
